# wasi-faas

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/extensions/http-outbound/: Cargo.toml  out.rs
crates/extensions/http-outbound/src/: allowd_hosts.rs  client.rs  lib.rs
crates/interface/: Cargo.toml  build.rs
crates/interface/src/: lib.rs
crates/interface/witx/: wasi_faas_http.witx
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/ext/http/: Cargo.toml
crates/runtime/ext/http/src/: lib.rs
crates/runtime/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/macros/: Cargo.toml
crates/sdk/macros/src/: lib.rs
crates/sdk/src/: error.rs  lib.rs  result.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  server.rs
crates/types/: Cargo.toml
crates/types/src/: http.rs  lib.rs
crates/wasi-faas/: Cargo.toml
crates/wasi-faas/src/: runtime.rs
wit/: http-outbound.wit  http-types.wit
