[package]
name = "wasi-faas-runtime-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1"
futures = "0.3.24"
http = "0.2"
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }
thiserror = "1"
url = "2.3.1"
wasmtime = "0.40.1"
wasi-faas-types = { path = "../../../types", version = "0.1.0" }
hyper = { version = "0.14.20", features = ["server", "http1", "tcp", "stream"] }
tokio = { version = "1.21.1", features = ["rt"] }
